# northerndawn

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  prod.sh
.github/workflows/: ci.yml
backend/: Cargo.toml  config.example.toml
backend/src/: api.rs  config.rs  main.rs  models.rs  polling.rs  state.rs  viewline.rs
frontend/: eslint.config.js
frontend/src/api/: client.ts
frontend/src/components/: AuroraMap.vue
frontend/src/stores/: aurora.ts
tui/: Cargo.toml
tui/src/: main.rs
